# pairtree

./: Cargo.toml  README.md  license.md
.github/workflows/: rust.yml
src/: main.rs
test_files_in/: test2.txt
test_files_in/35/71/: test3.txt
test_files_in/47/f4/: test1.txt
