[package]
name = "pairtree"
version = "0.0.1"
authors = ["Chad Nelson <chadbnelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
walkdir = "2"
sha-1 = "0.9.6"
blake3 = "0.3.7"
md-5 = "0.9.1"
hex  = "0.4.3"
regex = "1.5.4"